feat: add upload files and server
