# docs/swagger.json
@@ -287,6 +287,24 @@
                     }
                 }
             }
+        },
+        "/upload/file": {
+            "post": {
+                "description": "UploadFile upload file to server",
+                "tags": [
+                    "Upload File API"
+                ],
+                "summary": "UploadFile upload file to server",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "file",
+                        "name": "file",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
